src/lib/schwa/formats/warc_gen.cc

#line 1 "../ragel/formats/warc/warc.rl"
// vim: ft=ragel:
/* -*- Mode: C++; indent-tabs-mode: nil -*- */


#line 77 "../ragel/formats/warc/warc.rl"



#include <cstring>
#include <iostream>
#include <memory>
#include <sstream>
#include <stdexcept>

#include <schwa/formats/warc.h>


namespace schwa {
namespace formats {


#line 25 "schwa/formats/warc_gen.cc"
static const int warc_start = 77;

static const int warc_en_main = 77;


#line 93 "../ragel/formats/warc/warc.rl"

bool
WARCParser::_run(std::istream &input, const size_t buffer_size) {
  (void)warc_en_main;  // Shoosh compiler warning about unused variable.
  const uint8_t *te = nullptr, *ts = nullptr;
  int cs = 0;

  
#line 40 "schwa/formats/warc_gen.cc"
	{
	cs = warc_start;
	}

#line 101 "../ragel/formats/warc/warc.rl"

  std::unique_ptr<uint8_t[]> scoped_buffer(new uint8_t[buffer_size]);
  uint8_t *buffer = scoped_buffer.get();

  bool done = false;
  size_t have = 0;
  while (!done) {
    const size_t space = buffer_size - have;
    if (space == 0) {
      std::ostringstream msg;
      msg << "current lexeme is larger than buffer size of " << buffer_size;
      throw std::runtime_error(msg.str());
    }

    uint8_t *p = buffer + have;
    input.read(reinterpret_cast<char *>(p), space);
    size_t nread = input.gcount();

    uint8_t *pe = p + nread;
    uint8_t *eof = nullptr;
    if (nread == 0) {
      eof = pe;
      done = true;
    }

    
#line 72 "schwa/formats/warc_gen.cc"
	{
	short _widec;
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 77:
	if ( (*p) == 87u )
		goto tr134;
	goto st0;
st0:
cs = 0;
	goto _out;
tr134:
#line 20 "../ragel/formats/warc/warc.rl"
	{ _record_start(); }
	goto st1;
tr135:
#line 11 "../ragel/formats/warc/warc.rl"
	{ _block_end(); }
#line 21 "../ragel/formats/warc/warc.rl"
	{ _record_end(); }
#line 20 "../ragel/formats/warc/warc.rl"
	{ _record_start(); }
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 102 "schwa/formats/warc_gen.cc"
	if ( (*p) == 65u )
		goto st2;
	goto st0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) == 82u )
		goto st3;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 67u )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 47u )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	switch( (*p) ) {
		case 48u: goto st6;
		case 49u: goto st57;
	}
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 46u )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 49u )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 56u )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	switch( (*p) ) {
		case 10u: goto st10;
		case 13u: goto st33;
	}
	goto st0;
tr54:
#line 18 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_end(); }
	goto st10;
tr56:
#line 16 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_start(); }
#line 18 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_end(); }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 180 "schwa/formats/warc_gen.cc"
	switch( (*p) ) {
		case 10u: goto st12;
		case 13u: goto st20;
		case 33u: goto tr15;
		case 124u: goto tr15;
		case 126u: goto tr15;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto tr15;
		} else if ( (*p) >= 35u )
			goto tr15;
	} else if ( (*p) > 46u ) {
		if ( (*p) > 57u ) {
			if ( 65u <= (*p) && (*p) <= 122u )
				goto tr15;
		} else if ( (*p) >= 48u )
			goto tr15;
	} else
		goto tr15;
	goto st11;
tr55:
#line 18 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_end(); }
	goto st11;
tr57:
#line 16 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_start(); }
#line 18 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_end(); }
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
#line 217 "schwa/formats/warc_gen.cc"
	if ( (*p) == 10u )
		goto st10;
	goto st11;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 10 "../ragel/formats/warc/warc.rl"
 _block_consume_test()  ) _widec += 256;
	switch( _widec ) {
		case 266: goto tr16;
		case 269: goto tr17;
		case 522: goto tr19;
	}
	if ( 512 <= _widec && _widec <= 767 )
		goto tr18;
	goto st0;
tr16:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 246 "schwa/formats/warc_gen.cc"
	switch( (*p) ) {
		case 10u: goto st78;
		case 13u: goto st14;
	}
	goto st0;
st78:
	if ( ++p == pe )
		goto _test_eof78;
case 78:
	if ( (*p) == 87u )
		goto tr135;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( (*p) == 10u )
		goto st78;
	goto st0;
tr17:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
#line 274 "schwa/formats/warc_gen.cc"
	if ( (*p) == 10u )
		goto st13;
	goto st0;
tr18:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st16;
tr24:
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 292 "schwa/formats/warc_gen.cc"
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 10 "../ragel/formats/warc/warc.rl"
 _block_consume_test()  ) _widec += 256;
	switch( _widec ) {
		case 266: goto st13;
		case 269: goto st15;
		case 522: goto tr25;
	}
	if ( 512 <= _widec && _widec <= 767 )
		goto tr24;
	goto st0;
tr19:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st17;
tr25:
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 320 "schwa/formats/warc_gen.cc"
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 10 "../ragel/formats/warc/warc.rl"
 _block_consume_test()  ) _widec += 256;
	switch( _widec ) {
		case 266: goto st79;
		case 269: goto st18;
		case 522: goto tr28;
		case 525: goto tr29;
	}
	if ( 512 <= _widec && _widec <= 767 )
		goto tr24;
	goto st0;
tr37:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
	goto st79;
st79:
	if ( ++p == pe )
		goto _test_eof79;
case 79:
#line 343 "schwa/formats/warc_gen.cc"
	switch( (*p) ) {
		case 10u: goto st78;
		case 13u: goto st14;
		case 87u: goto tr135;
	}
	goto st0;
tr38:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 358 "schwa/formats/warc_gen.cc"
	if ( (*p) == 10u )
		goto st79;
	goto st0;
tr39:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st80;
tr28:
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st80;
st80:
	if ( ++p == pe )
		goto _test_eof80;
case 80:
#line 376 "schwa/formats/warc_gen.cc"
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 10 "../ragel/formats/warc/warc.rl"
 _block_consume_test()  ) _widec += 256;
	switch( _widec ) {
		case 266: goto st79;
		case 269: goto st18;
		case 343: goto tr135;
		case 522: goto tr28;
		case 525: goto tr29;
	}
	if ( 512 <= _widec && _widec <= 767 )
		goto tr24;
	goto st0;
tr40:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st19;
tr29:
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 406 "schwa/formats/warc_gen.cc"
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 10 "../ragel/formats/warc/warc.rl"
 _block_consume_test()  ) _widec += 256;
	switch( _widec ) {
		case 266: goto st79;
		case 269: goto st15;
		case 522: goto tr28;
	}
	if ( 512 <= _widec && _widec <= 767 )
		goto tr24;
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	if ( (*p) == 10u )
		goto st21;
	goto st11;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 10 "../ragel/formats/warc/warc.rl"
 _block_consume_test()  ) _widec += 256;
	switch( _widec ) {
		case 266: goto tr31;
		case 269: goto tr32;
		case 289: goto tr15;
		case 300: goto st11;
		case 303: goto st11;
		case 379: goto st11;
		case 381: goto st11;
		case 522: goto tr34;
		case 525: goto tr35;
		case 545: goto tr36;
		case 556: goto tr33;
		case 559: goto tr33;
		case 635: goto tr33;
		case 637: goto tr33;
	}
	if ( _widec < 383 ) {
		if ( _widec < 296 ) {
			if ( _widec > 290 ) {
				if ( 291 <= _widec && _widec <= 295 )
					goto tr15;
			} else if ( _widec >= 256 )
				goto st11;
		} else if ( _widec > 297 ) {
			if ( _widec < 314 ) {
				if ( 298 <= _widec && _widec <= 313 )
					goto tr15;
			} else if ( _widec > 320 ) {
				if ( 321 <= _widec && _widec <= 382 )
					goto tr15;
			} else
				goto st11;
		} else
			goto st11;
	} else if ( _widec > 511 ) {
		if ( _widec < 554 ) {
			if ( _widec < 547 ) {
				if ( 512 <= _widec && _widec <= 546 )
					goto tr33;
			} else if ( _widec > 551 ) {
				if ( 552 <= _widec && _widec <= 553 )
					goto tr33;
			} else
				goto tr36;
		} else if ( _widec > 569 ) {
			if ( _widec < 577 ) {
				if ( 570 <= _widec && _widec <= 576 )
					goto tr33;
			} else if ( _widec > 638 ) {
				if ( 639 <= _widec && _widec <= 767 )
					goto tr33;
			} else
				goto tr36;
		} else
			goto tr36;
	} else
		goto st11;
	goto st0;
tr31:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
	goto st22;
tr34:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 508 "schwa/formats/warc_gen.cc"
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 10 "../ragel/formats/warc/warc.rl"
 _block_consume_test()  ) _widec += 256;
	switch( _widec ) {
		case 266: goto tr37;
		case 269: goto tr38;
		case 522: goto tr39;
		case 525: goto tr40;
	}
	if ( 512 <= _widec && _widec <= 767 )
		goto tr18;
	goto st0;
tr32:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
	goto st23;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
#line 531 "schwa/formats/warc_gen.cc"
	if ( (*p) == 10u )
		goto st24;
	goto st11;
tr71:
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
#line 543 "schwa/formats/warc_gen.cc"
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 10 "../ragel/formats/warc/warc.rl"
 _block_consume_test()  ) _widec += 256;
	switch( _widec ) {
		case 266: goto tr42;
		case 269: goto tr43;
		case 289: goto tr15;
		case 300: goto st11;
		case 303: goto st11;
		case 379: goto st11;
		case 381: goto st11;
		case 522: goto tr44;
		case 525: goto tr45;
		case 545: goto tr36;
		case 556: goto tr33;
		case 559: goto tr33;
		case 635: goto tr33;
		case 637: goto tr33;
	}
	if ( _widec < 383 ) {
		if ( _widec < 296 ) {
			if ( _widec > 290 ) {
				if ( 291 <= _widec && _widec <= 295 )
					goto tr15;
			} else if ( _widec >= 256 )
				goto st11;
		} else if ( _widec > 297 ) {
			if ( _widec < 314 ) {
				if ( 298 <= _widec && _widec <= 313 )
					goto tr15;
			} else if ( _widec > 320 ) {
				if ( 321 <= _widec && _widec <= 382 )
					goto tr15;
			} else
				goto st11;
		} else
			goto st11;
	} else if ( _widec > 511 ) {
		if ( _widec < 554 ) {
			if ( _widec < 547 ) {
				if ( 512 <= _widec && _widec <= 546 )
					goto tr33;
			} else if ( _widec > 551 ) {
				if ( 552 <= _widec && _widec <= 553 )
					goto tr33;
			} else
				goto tr36;
		} else if ( _widec > 569 ) {
			if ( _widec < 577 ) {
				if ( 570 <= _widec && _widec <= 576 )
					goto tr33;
			} else if ( _widec > 638 ) {
				if ( 639 <= _widec && _widec <= 767 )
					goto tr33;
			} else
				goto tr36;
		} else
			goto tr36;
	} else
		goto st11;
	goto st0;
tr42:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
	goto st81;
tr44:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st81;
tr76:
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st81;
st81:
	if ( ++p == pe )
		goto _test_eof81;
case 81:
#line 625 "schwa/formats/warc_gen.cc"
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 10 "../ragel/formats/warc/warc.rl"
 _block_consume_test()  ) _widec += 256;
	switch( _widec ) {
		case 266: goto tr37;
		case 269: goto tr38;
		case 343: goto tr135;
		case 522: goto tr39;
		case 525: goto tr40;
	}
	if ( 512 <= _widec && _widec <= 767 )
		goto tr18;
	goto st0;
tr43:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
	goto st25;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
#line 649 "schwa/formats/warc_gen.cc"
	if ( (*p) == 10u )
		goto st82;
	goto st11;
tr79:
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st82;
st82:
	if ( ++p == pe )
		goto _test_eof82;
case 82:
#line 661 "schwa/formats/warc_gen.cc"
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 10 "../ragel/formats/warc/warc.rl"
 _block_consume_test()  ) _widec += 256;
	switch( _widec ) {
		case 266: goto tr42;
		case 269: goto tr43;
		case 289: goto tr15;
		case 300: goto st11;
		case 303: goto st11;
		case 379: goto st11;
		case 381: goto st11;
		case 522: goto tr44;
		case 525: goto tr45;
		case 545: goto tr36;
		case 556: goto tr33;
		case 559: goto tr33;
		case 635: goto tr33;
		case 637: goto tr33;
	}
	if ( _widec < 383 ) {
		if ( _widec < 296 ) {
			if ( _widec > 290 ) {
				if ( 291 <= _widec && _widec <= 295 )
					goto tr15;
			} else if ( _widec >= 256 )
				goto st11;
		} else if ( _widec > 297 ) {
			if ( _widec < 314 ) {
				if ( 298 <= _widec && _widec <= 313 )
					goto tr15;
			} else if ( _widec > 320 ) {
				if ( 321 <= _widec && _widec <= 382 )
					goto tr15;
			} else
				goto st11;
		} else
			goto st11;
	} else if ( _widec > 511 ) {
		if ( _widec < 554 ) {
			if ( _widec < 547 ) {
				if ( 512 <= _widec && _widec <= 546 )
					goto tr33;
			} else if ( _widec > 551 ) {
				if ( 552 <= _widec && _widec <= 553 )
					goto tr33;
			} else
				goto tr36;
		} else if ( _widec > 569 ) {
			if ( _widec < 577 ) {
				if ( 570 <= _widec && _widec <= 576 )
					goto tr33;
			} else if ( _widec > 638 ) {
				if ( 639 <= _widec && _widec <= 767 )
					goto tr33;
			} else
				goto tr36;
		} else
			goto tr36;
	} else
		goto st11;
	goto st0;
tr15:
#line 13 "../ragel/formats/warc/warc.rl"
	{ _named_field_key_start(); }
#line 14 "../ragel/formats/warc/warc.rl"
	{ _named_field_key_consume((*p)); }
	goto st26;
tr47:
#line 14 "../ragel/formats/warc/warc.rl"
	{ _named_field_key_consume((*p)); }
	goto st26;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
#line 739 "schwa/formats/warc_gen.cc"
	switch( (*p) ) {
		case 10u: goto st10;
		case 33u: goto tr47;
		case 58u: goto tr48;
		case 124u: goto tr47;
		case 126u: goto tr47;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto tr47;
		} else if ( (*p) >= 35u )
			goto tr47;
	} else if ( (*p) > 46u ) {
		if ( (*p) > 57u ) {
			if ( 65u <= (*p) && (*p) <= 122u )
				goto tr47;
		} else if ( (*p) >= 48u )
			goto tr47;
	} else
		goto tr47;
	goto st11;
tr48:
#line 15 "../ragel/formats/warc/warc.rl"
	{ _named_field_key_end(); }
	goto st27;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
#line 770 "schwa/formats/warc_gen.cc"
	switch( (*p) ) {
		case 9u: goto st29;
		case 10u: goto st30;
		case 13u: goto st34;
		case 32u: goto st29;
	}
	goto tr49;
tr49:
#line 16 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_start(); }
#line 17 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_consume((*p)); }
	goto st28;
tr53:
#line 17 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_consume((*p)); }
	goto st28;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
#line 792 "schwa/formats/warc_gen.cc"
	switch( (*p) ) {
		case 10u: goto tr54;
		case 13u: goto tr55;
	}
	goto tr53;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	switch( (*p) ) {
		case 9u: goto st29;
		case 10u: goto tr56;
		case 13u: goto tr57;
		case 32u: goto st29;
	}
	goto tr49;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	switch( (*p) ) {
		case 9u: goto st31;
		case 32u: goto st31;
	}
	goto st0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	switch( (*p) ) {
		case 9u: goto st31;
		case 10u: goto tr56;
		case 13u: goto tr60;
		case 32u: goto st31;
	}
	goto tr59;
tr59:
#line 16 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_start(); }
#line 17 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_consume((*p)); }
	goto st32;
tr61:
#line 17 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_consume((*p)); }
	goto st32;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
#line 843 "schwa/formats/warc_gen.cc"
	switch( (*p) ) {
		case 10u: goto tr54;
		case 13u: goto tr62;
	}
	goto tr61;
tr62:
#line 18 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_end(); }
	goto st33;
tr60:
#line 16 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_start(); }
#line 18 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_end(); }
	goto st33;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
#line 863 "schwa/formats/warc_gen.cc"
	if ( (*p) == 10u )
		goto st10;
	goto st0;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	if ( (*p) == 10u )
		goto st35;
	goto st11;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	switch( (*p) ) {
		case 9u: goto st29;
		case 10u: goto st12;
		case 13u: goto st20;
		case 32u: goto st29;
		case 33u: goto tr15;
		case 124u: goto tr15;
		case 126u: goto tr15;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto tr15;
		} else if ( (*p) >= 35u )
			goto tr15;
	} else if ( (*p) > 46u ) {
		if ( (*p) > 57u ) {
			if ( 65u <= (*p) && (*p) <= 122u )
				goto tr15;
		} else if ( (*p) >= 48u )
			goto tr15;
	} else
		goto tr15;
	goto st11;
tr33:
#line 8 "../ragel/formats/warc/warc.rl"
	{ _block_start(); }
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st36;
tr66:
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st36;
tr91:
#line 18 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_end(); }
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st36;
tr95:
#line 16 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_start(); }
#line 18 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_end(); }
#line 9 "../ragel/formats/warc/warc.rl"
	{ _block_consume((*p)); }
	goto st36;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
#line 930 "schwa/formats/warc_gen.cc"
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 10 "../ragel/formats/warc/warc.rl"
 _block_consume_test()  ) _widec += 256;
	switch( _widec ) {
		case 266: goto st37;
		case 269: goto st40;
		case 522: goto tr67;
	}
	if ( _widec > 511 ) {
		if ( 512 <= _widec && _widec <= 767 )
			goto tr66;
	} else if ( _widec >= 256 )
		goto st11;
	goto st0;
tr87:
#line 18 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_end(); }
	goto st37;
tr92:
#line 16 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_start(); }
#line 18 "../ragel/formats/warc/warc.rl"
	{ _named_field_val_end(); }
	goto st37;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
#line 961 "schwa/formats/warc_gen.cc"
	switch( (*p) ) {
		case 10u: goto st83;
		case 13u: goto st38;
		case 33u: goto tr15;
		case 124u: goto tr15;
		case 126u: goto tr15;
	}
	if ( (*p) < 45u ) {
		if ( (*p) > 39u ) {
			if ( 42u <= (*p) && (*p) <= 43u )
				goto tr15;
		} else if ( (*p) >= 35u )
			goto tr15;
	} else if ( (*p) > 46u ) {
		if ( (*p) > 57u ) {
			if ( 65u <= (*p) && (*p) <= 122u )
				goto tr15;
		} else if ( (*p) >= 48u )
			goto tr15;
	} else
		goto tr15;
	goto st11;
st83:
	if ( ++p == pe )
		goto _test_eof83;
case 83:
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 10 "../ragel/formats/warc/warc.rl"
 _block_consume_test()  ) _widec += 256;
	switch( _widec ) {
		case 266: goto tr16;
		case 269: goto tr17;
		case 343: goto tr135;
		case 522: goto tr19;
	}
	if ( 512 <= _widec && _widec <= 767 )
		goto tr18;
	goto st0;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
	if ( (*p) == 10u )
		goto st84;
	goto st11;
st84:
	if ( ++p == pe )
		goto _test_eof84;
case 84:
	_widec = (*p);
	_widec = (short)(256u + ((*p) - 0u));
	if ( 
#line 10 "../ragel/formats/warc/warc.rl"
 _block_consume_test()  ) _widec += 256;
	switch( _widec ) {
		case 266: goto tr31;
		case 269: goto tr32;
		case 289: goto tr15;
		case 300: goto st11;
		case 303: goto st11;
		case 379: goto st11;
		case 381: goto st11;
		case 522: goto tr34;
		case 525: goto tr35;
		case 545: goto tr36;
		case 556: goto tr33;
		case 559: goto tr33;
		case 635: goto tr33;
		case 637: goto tr33;
	}
	if ( _widec < 383 ) {
		if ( _widec < 296 ) {
			if ( _widec > 290 ) {
				if ( 291 <= _widec && _widec <= 295 )
					goto tr15;
			} else if ( _widec >= 256 )
				goto st11;
		} else if ( _widec > 297 ) {
			if ( _widec < 314 ) {
				if ( 298 <= _widec && _widec <= 313 )
					goto tr15;
			} else if ( _widec > 320 ) {
				if ( 321 <= _widec && _widec <= 382 )
					goto tr15;
			} else
				goto st11;
		} else
			goto st11;
	} else if ( _widec > 511 ) {
		if ( _widec < 554 ) {
			if ( _widec < 547 ) {
				if ( 512 <= _widec && _widec <= 546 )
					goto tr33;
